# fast-api

./: .gitignore  alembic.ini  coroprac.py  database.py  main.py  practice.db  pyproject.toml
config/: settings.py
db/: connection.py
migrations/: env.py
migrations/versions/: b15c78160daf_.py
models/: events.py  questions.py  relationships.py  users.py
routes/: events.py  users.py
