[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["sds7629 <sds7629@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
pydantic = {extras = ["email"], version = "^2.5.2"}
sqlmodel = "^0.0.14"
tortoise-orm = "^0.20.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
